Standardize terms used in claim system logic, and add a number-of-claims flag to parent regions indicating how many chunks are in that parent